--- a/index.html
+++ b/index.html
@@ -159,24 +159,26 @@
 
                 <div class="h-1/2 bg-black p-4">
                     <h1 class="text-3xl text-center p-5 text-white mb-5">Budget</h1>
-                    <p class="inline">Per Player</p> <input type="text"
+                    <p class="inline">Per Player</p> <input id="per-player" type="text"
                         class="border-2 border-white bg-black p-1 w-36 ml-6"> <br> <br>
-                    <button class="px-5 py-2 bg-primary text-white w-full rounded-none text-xl mb-3">Calculate</button>
+                    <button id="calculate-btn"
+                        class="px-5 py-2 bg-primary text-white w-full rounded-none text-xl mb-3">Calculate</button>
 
                     <p class="inline mr-4">Player Expenses</p>
-                    <p class="inline">$<span>0</span></p> <br> <br>
+                    <p class="inline">$<span id="player-expenses">0</span></p> <br> <br>
 
-                    <p class="inline">Manager</p> <input type="text"
+                    <p class="inline">Manager</p> <input id="manager-expenses" type="text"
                         class="border-2 border-white bg-black p-1 w-36 ml-7"> <br> <br>
 
-                    <p class="inline">Coach</p> <input type="text"
+                    <p class="inline">Coach</p> <input id="coach-expenses" type="text"
                         class="border-2 border-white bg-black p-1 w-36 ml-12"> <br> <br>
 
-                    <button class="px-5 py-2 bg-primary text-white w-full rounded-none text-xl mb-3">Calculate
+                    <button id="calculate-total-button"
+                        class="px-5 py-2 bg-primary text-white w-full rounded-none text-xl mb-3">Calculate
                         Total</button>
 
-                    <p class="inline mr-4 font-semibold mr-6">Total</p>
-                    <p class="inline ml-40">$<span>0</span></p>
+                    <p class="inline mr-6 font-semibold ">Total</p>
+                    <p class="inline ml-32">$<span id="total">0</span></p>
 
                 </div>
 
@@ -189,8 +191,9 @@
             <p>Copyright @ 2022 All Rights Reserved.</p>
         </div>
     </footer>
-
+    <script src="js/common.js"></script>
     <script src="js/selectFive.js"></script>
+    <script src="js/budget.js"></script>
 </body>
 
 </html>
