--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
     </footer>
     <script src="js/common.js"></script>
     <script src="js/selectFive.js"></script>
-    <script src="js/budget.js"></script>
+    <script src="js/budgetCalculate.js"></script>
+    <script src="js/budgetTotalCalculate.js"></script>
 </body>
 
 </html>
