--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
 
             <div>
 
-                <div class="h-80 bg-black mb-4">
+                <div class="h-80 bg-black mb-4 p-5">
                     <h1 class="text-3xl text-center p-5 text-white">Selected-V</h1>
                     <div class="overflow-x-auto">
-                        <table class="w-full text-xl">
+                        <table class="w-full text-xl player-list-count">
 
                             <tbody id="player-list">
 
