--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 
 </head>
 
-<body>
+<body class="font-mono">
 
     <header>
-        <div class="min-h-screen w-full grid content-center bg-black">
-            <div class="">
-                <img class=" w-1/4 mx-auto" src="images/manu.png" alt="">
-                <h1 class="text-5xl font-mono text-center text-red-500">Manchester United
-                    F.C.</h1>
-            </div>
+
+        <div class="max-h-min p-24 w-full grid content-center bg-black">
+            <img class=" w-1/4 mx-auto" src="images/manu-logo2.png" alt="">
+            <h1 class="text-5xl  text-center text-red-600 font-extrabold">
+                Manchester United
+                F.C.</h1>
         </div>
+
     </header>
 
     <main>
@@ -29,12 +30,12 @@
             <div>
                 <div
                     class="card card-compact w-full bg-base-100 shadow-xl mb-4 rounded-none border-2 border-gray-500 h-80">
-                    <img class="w-full h-48" src="images/ronaldo.jpg" alt="Shoes" />
+                    <img class="w-full h-48" src="images/cr7.jpg" alt="" />
                     <div class="card-body bg-black">
-                        <h2 class="text-center text-2xl mb-3 font-semibold text-white">Cristiano Ronaldo (C)</h2>
+                        <h2 class="text-center text-2xl mb-3 font-semibold text-white">Cristiano Ronaldo</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl ">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -46,7 +47,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Lisandro Martinez</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -58,7 +59,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Bruno Fernandes</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -74,7 +75,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Raphael Varane</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -86,7 +87,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Jadon Sancho</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -98,7 +99,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">David De Gea</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -112,7 +113,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Casemiro</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -124,7 +125,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Diago Dalot</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -136,7 +137,7 @@
                         <h2 class="text-center text-2xl mb-3 font-semibold text-white">Christian Erikson</h2>
                         <div class="card-actions justify-end">
                             <button onclick="addToSelectFive(this)"
-                                class="btn btn-primary w-full rounded-none text-xl">SELECT</button>
+                                class="btn bg-cyan-900 text-white w-full rounded-none text-xl">SELECT</button>
                         </div>
                     </div>
                 </div>
@@ -160,21 +161,21 @@
                 <div class="h-1/2 bg-black p-4">
                     <h1 class="text-3xl text-center p-5 text-white mb-5">Budget</h1>
                     <p class="inline">Per Player</p> <input id="per-player" type="text"
-                        class="border-2 border-white bg-black p-1 w-36 ml-6"> <br> <br>
+                        class="border-collapse border border-slate-200 bg-gray-900 p-1 w-36 ml-6 "> <br> <br>
                     <button id="calculate-btn"
-                        class="px-5 py-2 bg-primary text-white w-full rounded-none text-xl mb-3">Calculate</button>
+                        class="px-5 py-2 btn bg-cyan-900 text-white text-white w-full rounded-none text-xl mb-3">Calculate</button>
 
                     <p class="inline mr-4">Player Expenses</p>
                     <p class="inline">$<span id="player-expenses">0</span></p> <br> <br>
 
                     <p class="inline">Manager</p> <input id="manager-expenses" type="text"
-                        class="border-2 border-white bg-black p-1 w-36 ml-7"> <br> <br>
+                        class="border-collapse border border-slate-200 bg-black p-1 w-36 ml-7"> <br> <br>
 
                     <p class="inline">Coach</p> <input id="coach-expenses" type="text"
-                        class="border-2 border-white bg-black p-1 w-36 ml-12"> <br> <br>
+                        class="border-collapse border border-slate-200 bg-black p-1 w-36 ml-12"> <br> <br>
 
                     <button id="calculate-total-button"
-                        class="px-5 py-2 bg-primary text-white w-full rounded-none text-xl mb-3">Calculate
+                        class="px-5 py-2 btn bg-cyan-900 text-white text-white w-full rounded-none text-xl mb-3">Calculate
                         Total</button>
 
                     <p class="inline mr-6 font-semibold ">Total</p>
